--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -7,11 +7,19 @@ interface Props {
 	title: string;
 	description: string;
 	image?: string;
+	type?: string;
+	publishDate?: Date;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
+const { 
+	title, 
+	description, 
+	image = '/blog-placeholder-1.jpg',
+	type = 'website',
+	publishDate
+} = Astro.props;
 ---
 
 <!-- Global Metadata -->
@@ -31,13 +39,16 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
+<meta name="robots" content="index,follow" />
+{publishDate && <meta name="article:published_time" content={publishDate.toISOString()} />}
 
 <!-- Open Graph / Facebook -->
-<meta property="og:type" content="website" />
+<meta property="og:type" content={type} />
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
 <meta property="og:image" content={new URL(image, Astro.url)} />
+{publishDate && <meta property="article:published_time" content={publishDate.toISOString()} />}
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
@@ -48,3 +59,17 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta property="twitter:creator" content="@odysseyexchange" />
 <meta property="twitter:site" content="@odysseyexchange" />
 <meta property="twitter:image:alt" content={description} />
+
+<!-- Schema.org -->
+<script type="application/ld+json" set:html={JSON.stringify({
+	"@context": "https://schema.org",
+	"@type": type === "article" ? "BlogPosting" : "WebPage",
+	"headline": title,
+	"description": description,
+	"image": new URL(image, Astro.url),
+	"url": canonicalURL,
+	...(publishDate && {
+		"datePublished": publishDate.toISOString(),
+		"dateModified": publishDate.toISOString()
+	})
+})} />
