--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,15 +21,6 @@ import { SITE_TITLE } from '../consts';
 					></path>
 				</svg>
 			</a>
-			<a href="https://t.me/t_dmi3" target="_blank">
-				<span class="sr-only">Join Odyssey Exchange on Telegram</span>
-				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32">
-					<path
-						fill="currentColor"
-						d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.287 5.906c-.778.324-2.334.994-4.666 2.01-.378.15-.577.298-.595.442-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294.26.006.549-.1.868-.32 2.179-1.471 3.304-2.214 3.374-2.23.05-.012.12-.026.166.016.047.041.042.12.037.141-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8.154 8.154 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629.093.06.183.125.27.187.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.426 1.426 0 0 0-.013-.315.337.337 0 0 0-.114-.217.526.526 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09z"
-					></path>
-				</svg>
-			</a>
 		</div>
 	</nav>
 </header>
@@ -42,15 +33,12 @@ import { SITE_TITLE } from '../consts';
 	}
 	h2 {
 		margin: 0;
-		font-size: 1.5em;
+		font-size: 1em;
 	}
 
 	h2 a,
 	h2 a.active {
 		text-decoration: none;
-		background: var(--gradient-primary);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
 	}
 	nav {
 		display: flex;
@@ -59,26 +47,17 @@ import { SITE_TITLE } from '../consts';
 	}
 	nav a {
 		padding: 1em 0.5em;
-		color: var(--brand);
+		color: var(--black);
 		border-bottom: 4px solid transparent;
 		text-decoration: none;
 	}
-	nav a:hover {
-		color: var(--brand-light);
-	}
 	nav a.active {
 		text-decoration: none;
-		border-bottom-color: var(--brand);
+		border-bottom-color: var(--accent);
 	}
 	.social-links,
 	.social-links a {
 		display: flex;
-	}
-	.social-links a {
-		color: var(--brand);
-	}
-	.social-links a:hover {
-		color: var(--brand-light);
 	}
 	@media (max-width: 720px) {
 		.social-links {
