--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -9,12 +9,16 @@ export async function getStaticPaths() {
 		props: post,
 	}));
 }
+
 type Props = CollectionEntry<'blog'>;
 
 const post = Astro.props;
 const { Content } = await post.render();
+
+// Get the canonical URL
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 ---
 
-<BlogPost {...post.data} slug={post.slug}>
+<BlogPost {...post.data} canonicalURL={canonicalURL} slug={post.slug}>
 	<Content />
 </BlogPost>
