--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -14,11 +14,8 @@ type Props = CollectionEntry<'blog'>;
 
 const post = Astro.props;
 const { Content } = await post.render();
-
-// Get the canonical URL
-const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 ---
 
-<BlogPost {...post.data} canonicalURL={canonicalURL} slug={post.slug}>
+<BlogPost {...post.data}>
 	<Content />
 </BlogPost>
