--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -6,13 +6,7 @@ type Props = HTMLAttributes<'a'>;
 const { href, class: className, ...props } = Astro.props;
 
 const { pathname } = Astro.url;
-const subpath = pathname.match(/[^\/]+/g) ?? [];
-const currentPath = subpath[0] ?? '';
-const linkPath = String(href).match(/[^\/]+/g) ?? [];
-const isActive = linkPath.length > 1 
-  ? href === pathname
-  : currentPath === linkPath[0];
-
+const isActive = pathname.replace(/\/$/, '') === href.toString().replace(/\/$/, '');
 ---
 
 <a href={href} class:list={[className, { active: isActive }]} {...props}>
